# alpaca_api_client

./: Cargo.toml
examples/: create_order.rs  get_order.rs  manage_account.rs  portfolio_history.rs
src/: timeframe.rs  trend.rs
src/market_data/: news.rs  screener.rs
src/market_data/crypto/: bars.rs  orderbook.rs  quotes.rs  snapshot.rs  trades.rs
src/market_data/options/: bars.rs  chain.rs  quotes.rs  snapshot.rs  trades.rs
src/market_data/stocks/: auctions.rs  bars.rs  quotes.rs  snapshot.rs  trades.rs
src/trading/: account.rs  activities.rs  calendar.rs  clock.rs  portfolio.rs  positions.rs
src/trading/assets/: assets.rs  mod.rs  option_contracts.rs
src/trading/order/: create.rs  delete.rs  get.rs  mod.rs  replace.rs
